# pkg/routes/private_routes.go
@@ -10,13 +10,13 @@ import (
 func PrivateRoutes(a *fiber.App, customerClient *customers.CustomerClient,
 	accountsClient *account.AccountServiceClient) {
 
-	a.Get("/account", func(ctx *fiber.Ctx) error {
+	a.Get("/getaccountdetails", func(ctx *fiber.Ctx) error {
 		return controllers.GetAccountDetails(ctx, accountsClient)
 	})
 	a.Get("/getallaccounts", func(ctx *fiber.Ctx) error {
 		return controllers.GetAllAccounts(ctx, accountsClient)
 	})
-	a.Get("/user", func(ctx *fiber.Ctx) error {
+	a.Get("/user/:id", func(ctx *fiber.Ctx) error {
 		return controllers.GetCustomerDetails(ctx, customerClient)
 	})
 	a.Get("/getallusers", func(ctx *fiber.Ctx) error {
@@ -30,7 +30,7 @@ func PrivateRoutes(a *fiber.App, customerClient *customers.CustomerClient,
 	a.Delete("/account", func(ctx *fiber.Ctx) error {
 		return controllers.BlockAccount(ctx, accountsClient)
 	})
-	a.Delete("/user/{id}/block", func(ctx *fiber.Ctx) error {
+	a.Get("/user/:id/block", func(ctx *fiber.Ctx) error {
 		return controllers.BlockCustomer(ctx, customerClient)
 	})
 }
